Implemented color chooser

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,21 @@
         app:layout_constraintTop_toBottomOf="@id/cv_main_canvas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ib_open_brush_color_dialog"
         android:src="@drawable/icon_brush"
+        android:contentDescription="@string/cd_open_brush_size" />
+
+    <ImageButton
+        android:id="@+id/ib_open_brush_color_dialog"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toBottomOf="@id/cv_main_canvas"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ib_open_brush_size_dialog"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/icon_palette"
         android:contentDescription="@string/cd_open_brush_size" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
