--- a/app/src/main/res/layout/dialog_brush_color.xml
+++ b/app/src/main/res/layout/dialog_brush_color.xml
@@ -1,97 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    android:id="@+id/ll_palette"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center">
 
     <ImageButton
-        android:id="@+id/ib_brush_color_black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_black"
-        app:layout_constraintBottom_toTopOf="@id/ib_brush_color_white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        android:tag="@color/black"/>
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_brush_color_white"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_brush_color_black"
-        app:layout_constraintBottom_toTopOf="@id/ib_brush_color_grey"/>
+        android:background="@color/black"
+        android:tag="@color/white"/>
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_brush_color_grey"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_grey"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_brush_color_white"
-        app:layout_constraintBottom_toTopOf="@id/ib_brush_color_red"/>
+        android:tag="@color/grey"/>
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_brush_color_red"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_red"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_brush_color_grey"
-        app:layout_constraintBottom_toTopOf="@id/ib_brush_color_green"/>
+        android:tag="@color/red"/>
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_brush_color_green"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_green"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_brush_color_red"
-        app:layout_constraintBottom_toTopOf="@id/ib_brush_color_blue"/>
+        android:tag="@color/green"/>
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_brush_color_blue"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_blue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_brush_color_green"
-        app:layout_constraintBottom_toTopOf="@id/ib_brush_color_yellow"/>
+        android:tag="@color/blue"/>
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_brush_color_yellow"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_yellow"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_brush_color_blue"
-        app:layout_constraintBottom_toTopOf="@id/ib_brush_color_purple"/>
+        android:tag="@color/yellow"/>
 
     <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ib_brush_color_purple"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_purple"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_brush_color_yellow"
-        app:layout_constraintBottom_toTopOf="@id/ib_brush_color_coffee"/>
+        android:tag="@color/purple"/>
 
     <ImageButton
-        android:id="@+id/ib_brush_color_coffee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:src="@drawable/brush_color_coffee"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ib_brush_color_purple" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:tag="@color/coffee"/>
+</androidx.appcompat.widget.LinearLayoutCompat>
