--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey_border">#FF9AA2AF</color>
+    <color name="grey_background">#80FFFFFF</color>
     <!-- palette colors -->
     <color name="grey">#FF666666</color>
     <color name="red">#FFFF0000</color>
