--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,8 +66,21 @@
         app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/ib_open_brush_size_dialog"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ib_undo"
         android:src="@drawable/icon_palette"
         android:contentDescription="@string/cd_open_brush_size" />
+
+    <ImageButton
+        android:id="@+id/ib_undo"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ib_open_brush_color_dialog"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/icon_undo"
+        android:contentDescription="@string/cd_undo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
