Reworked saving and implemented sharing of drawings.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/ib_open_brush_size_dialog">
+        app:layout_constraintBottom_toTopOf="@id/cv_buttons_wrapper">
 
         <ImageView
             android:id="@+id/iv_background"
@@ -32,80 +32,104 @@
             android:id="@+id/cv_main_canvas" />
     </FrameLayout>
 
-    <ImageButton
-        android:id="@+id/ib_open_gallery"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:scaleType="fitXY"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cv_buttons_wrapper"
         app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ib_open_brush_size_dialog"
-        android:src="@drawable/icon_folder"
-        android:contentDescription="@string/cd_open_gallery" />
-
-    <ImageButton
-        android:id="@+id/ib_open_brush_size_dialog"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ib_open_gallery"
-        app:layout_constraintEnd_toStartOf="@id/ib_open_brush_color_dialog"
-        android:src="@drawable/icon_brush"
-        android:contentDescription="@string/cd_open_brush_size" />
-
-    <ImageButton
-        android:id="@+id/ib_open_brush_color_dialog"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ib_open_brush_size_dialog"
-        app:layout_constraintEnd_toStartOf="@id/ib_undo"
-        android:src="@drawable/icon_palette"
-        android:contentDescription="@string/cd_open_brush_size" />
-
-    <ImageButton
-        android:id="@+id/ib_undo"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ib_open_brush_color_dialog"
-        app:layout_constraintEnd_toStartOf="@id/ib_redo"
-        android:src="@drawable/icon_undo"
-        android:contentDescription="@string/cd_undo" />
-
-    <ImageButton
-        android:id="@+id/ib_redo"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ib_undo"
-        app:layout_constraintEnd_toStartOf="@id/ib_save"
-        android:src="@drawable/icon_redo"
-        android:contentDescription="@string/cd_redo" />
-
-    <ImageButton
-        android:id="@+id/ib_save"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toBottomOf="@id/fl_canvas_wrapper"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ib_redo"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/icon_save"
-        android:contentDescription="@string/cd_save" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="10dp">
+        <ImageButton
+            android:id="@+id/ib_open_gallery"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/ib_open_brush_size_dialog"
+            android:src="@drawable/icon_folder"
+            android:contentDescription="@string/cd_open_gallery" />
+
+        <ImageButton
+            android:id="@+id/ib_open_brush_size_dialog"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_margin="5dp"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ib_open_gallery"
+            app:layout_constraintEnd_toStartOf="@id/ib_open_brush_color_dialog"
+            android:src="@drawable/icon_brush"
+            android:contentDescription="@string/cd_open_brush_size" />
+
+        <ImageButton
+            android:id="@+id/ib_open_brush_color_dialog"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_margin="5dp"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ib_open_brush_size_dialog"
+            app:layout_constraintEnd_toStartOf="@id/ib_undo"
+            android:src="@drawable/icon_palette"
+            android:contentDescription="@string/cd_open_brush_size" />
+
+        <ImageButton
+            android:id="@+id/ib_undo"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_margin="5dp"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ib_open_brush_color_dialog"
+            app:layout_constraintEnd_toStartOf="@id/ib_redo"
+            android:src="@drawable/icon_undo"
+            android:contentDescription="@string/cd_undo" />
+
+        <ImageButton
+            android:id="@+id/ib_redo"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_margin="5dp"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ib_undo"
+            app:layout_constraintEnd_toStartOf="@id/ib_save"
+            android:src="@drawable/icon_redo"
+            android:contentDescription="@string/cd_redo" />
+
+        <ImageButton
+            android:id="@+id/ib_save"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_margin="5dp"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ib_redo"
+            app:layout_constraintEnd_toStartOf="@id/ib_share"
+            android:src="@drawable/icon_save"
+            android:contentDescription="@string/cd_save" />
+
+        <ImageButton
+            android:id="@+id/ib_share"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_margin="5dp"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/cd_share"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_share"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ib_save"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
